@@ -1,11 +1,11 @@
 {
-  "count": 16,
-  "uniques": 4,
+  "count": 14,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2022-10-28T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-10-29T00:00:00Z",
