@@ -1,3 +1,11 @@
+2022-11-11T16:28:23Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3446501261 # 219
+* notice: last 14d: unq all: 3 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 78 225 / 87 241
+* notice: next accum: outdated-unq outdated-all / unq all: 78 225 / 86 239
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -2 / +2 +4 -1 -3 / 1 1
+* notice: removed / changed dates: [] / [2022-10-28]
+
 2022-11-11T08:28:08Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3443585937 # 218
 * notice: last 14d: unq all: 4 16
